Fix problem with gplus and fb like buttons causing layout shifts. Fixed bug where unauthenticated users could not view quizzes because of an error in how users with similar score was calculated.

--- a/TwolipsDating/Content/Site.css
+++ b/TwolipsDating/Content/Site.css
@@ -226,9 +226,9 @@ input[type="checkbox"].input-validation-error {
     margin-bottom: 10px;
 }
 
-.navbar i {
-    font-size: 23px;
-}
+    .navbar i {
+        font-size: 23px;
+    }
 
 .tags a {
     margin-bottom: 4px;
@@ -1074,9 +1074,18 @@ input[readonly] {
         font-weight: 300;
     }
 
-#___plusone_0 {
-    vertical-align: bottom !important;
+.like-buttons {
+    vertical-align: middle;
+    padding-left: 5px;
+    overflow: hidden;
+    height: 34px;
+    display: inline-block;
 }
+
+    .like-buttons > ul > li {
+        padding: 0;
+        margin: 0;
+    }
 
 .fa-overlay-bottom-right {
     position: absolute;
